--- a/station-game/public/app/components/map/map.html
+++ b/station-game/public/app/components/map/map.html
@@ -1,9 +1,15 @@
-<h1>Map</h1>
-<p class="lead">Choose a location to travel.</p>
+<div class="page-header">
+    <h1>Map</h1>
+    <p class="lead">Choose a location to travel.</p>
+</div>
 <ul>
     <li ng-repeat="location in mapCtrl.locations">
-        <a ui-sref="location({ id: location._id })">
-            {{ location.name }}...
-        </a>
+        <a href ng-click="mapCtrl.selectLocation(location)">{{ location.name }}</a>
+        <ul ng-if="location.isSelected">
+            <li>
+                <p class="text-muted">{{ location.description }}</p>
+                <a class="btn" href ui-sref="location({ id: location._id })">Travel</a>
+            </li>
+        </ul>
     </li>
 </ul>
