--- a/station-game/public/app/components/structure/structure.html
+++ b/station-game/public/app/components/structure/structure.html
@@ -1,48 +1,47 @@
-<div id="room">
+<div class="page-header">
     <h1>{{ structureCtrl.room.name }} <span class="text-muted">({{:: structureCtrl.structure.name }})</span></h1>
-    <p class="lead" ng-show="structureCtrl.room.description">
-        <span ng-show="structureCtrl.room.isScanned">{{ structureCtrl.room.description }}</span>
-        <span ng-hide="structureCtrl.room.isScanned">???</span>
+    <p class="lead" ng-show="structureCtrl.room.isScanned && structureCtrl.room.description">
+        {{ structureCtrl.room.description }}
     </p>
     <p ng-hide="structureCtrl.room.isScanned">
         <a class="btn" href ng-click="structureCtrl.scanRoom(structureCtrl.room)">Scan Room</a>
     </p>
-    <ul ng-show="structureCtrl.room.isScanned">
-        <li ng-repeat="vessel in structureCtrl.room.vessels">
-            <a class="btn" href ng-click="structureCtrl.openVessel(vessel)" ng-class="{'btn-muted': !vessel.items.length}">
-                {{ vessel.name }}
-            </a>
-            <span class="text-muted" ng-show="!vessel.items.length">(Empty)</span>
-            <ul ng-show="vessel.isOpen && vessel.items.length">
-                <li ng-repeat="item in vessel.items">
-                    <a href ng-click="structureCtrl.selectItem(item)">
-                        {{ item.name }}
-                    </a>
-                    <ul ng-show="item.isSelected">
-                        <li>
-                            <p>{{ item.description }}</p>
-                            <a class="btn" href ng-click="structureCtrl.takeItem(item)">Take</a> <a class="btn btn-muted" href ng-click="item.isSelected = false">Cancel</a>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a class="btn" href ng-click="structureCtrl.takeAllItems(vessel)">Take all</a>
-                </li>
-            </ul>
-        </li>
-        <li ng-repeat="door in structureCtrl.room.doors">
-            <a href ng-click="structureCtrl.openDoor(door)" data-this-room="{{ thisRoom = structureCtrl.findRoomById(door.roomId) }}">
-                <span ng-show="door.isExit">&larr;&nbsp;Exit to {{::door.name }}</span>
-                <span ng-hide="door.isExit">
-                    <span ng-hide="door.entryAttempted || thisRoom.isScanned">Door...</span>
-                    <span ng-show="door.entryAttempted || thisRoom.isScanned">
-                        <span ng-show="thisRoom.isScanned">{{::door.name }}...</span><span ng-hide="thisRoom.isScanned">Door...</span>
-                    </span>
-                </span>
-            </a>
-            <span class="text-muted" ng-show="door.entryAttempted && door.isLocked">(Locked)</span>
-            <span class="text-muted" ng-show="door.isPrevious">(Back)</span>
-        </li>
-    </ul>
 </div>
+<ul ng-show="structureCtrl.room.isScanned">
+    <li ng-repeat="vessel in structureCtrl.room.vessels">
+        <a class="btn" href ng-click="structureCtrl.openVessel(vessel)" ng-class="{'btn-muted': !vessel.items.length}">
+            {{:: vessel.name }}
+        </a>
+        <span class="text-muted" ng-show="!vessel.items.length">(Empty)</span>
+        <ul ng-show="vessel.isOpen && vessel.items.length">
+            <li ng-repeat="item in vessel.items">
+                <a href ng-click="structureCtrl.selectItem(item)">
+                    {{ item.name }}
+                </a>
+                <ul ng-show="item.isSelected">
+                    <li>
+                        <p>{{ item.description }}</p>
+                        <a class="btn" href ng-click="structureCtrl.takeItem(item)">Take</a> <a class="btn btn-muted" href ng-click="item.isSelected = false">Cancel</a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <a class="btn" href ng-click="structureCtrl.takeAllItems(vessel)">Take all</a>
+            </li>
+        </ul>
+    </li>
+    <li ng-repeat="door in structureCtrl.room.doors">
+        <a href ng-click="structureCtrl.openDoor(door)" data-this-room="{{ thisRoom = structureCtrl.findRoomById(door.roomId) }}">
+            <span ng-show="door.isExit">&larr;&nbsp;Exit to {{::door.name }}</span>
+            <span ng-hide="door.isExit">
+                <span ng-hide="door.entryAttempted || thisRoom.isScanned">Door...</span>
+                <span ng-show="door.entryAttempted || thisRoom.isScanned">
+                    <span ng-show="thisRoom.isScanned">{{::door.name }}...</span><span ng-hide="thisRoom.isScanned">Door...</span>
+                </span>
+            </span>
+        </a>
+        <span class="text-muted" ng-show="door.entryAttempted && door.isLocked">(Locked)</span>
+        <span class="text-muted" ng-show="door.isPrevious">(Back)</span>
+    </li>
+</ul>
 <st-log></st-log>
