--- a/public/app/components/location/location.html
+++ b/public/app/components/location/location.html
@@ -2,13 +2,13 @@
     <h1>{{:: locationCtrl.location.name }}</h1>
     <p class="lead">{{:: locationCtrl.location.description }}</p>
 </div>
-<ul>
+<ul class="nav-showcase">
     <li ng-repeat="structure in locationCtrl.location.structures">
         <a href ng-click="locationCtrl.selectStructure(structure)">{{:: structure.name }}</a>
         <ul ng-if="structure.isSelected">
             <li ng-repeat="entrance in structure.entrances">
-                <p class="lead">{{:: structure.description }}</p>
-                <a class="btn" href ui-sref="structure({ locationId: locationCtrl.location._id, structureId: structure._id, roomId: entrance.roomId })">
+                <p>{{:: structure.description }}</p>
+                <a class="btn" href ng-click="structure.isSelected = false" ui-sref="structure({ locationId: locationCtrl.location._id, structureId: structure._id, roomId: entrance.roomId })">
                     Enter
                 </a> <span class="text-muted">({{:: entrance.name }})</span>
             </li>
