--- a/server/views/layouts/main.handlebars
+++ b/server/views/layouts/main.handlebars
@@ -10,6 +10,7 @@
             {{{ body }}}
             <ui-view></ui-view>
         </div>
+        <st-log></st-log>
         <script src="/js/app.js"></script>
     </body>
 </html>
