--- a/public/app/components/map/map.html
+++ b/public/app/components/map/map.html
@@ -2,13 +2,14 @@
     <h1>Map</h1>
     <p class="lead">Choose a location to travel.</p>
 </div>
-<ul>
+<ul class="nav-showcase">
     <li ng-repeat="location in mapCtrl.locations">
         <a href ng-click="mapCtrl.selectLocation(location)">{{ location.name }}</a>
         <ul ng-if="location.isSelected">
             <li>
-                <p class="text-muted">{{ location.description }}</p>
+                <p>{{ location.description }}</p>
                 <a class="btn" href ui-sref="location({ id: location._id })">Travel</a>
+                <a class="btn btn-muted" href ng-click="location.isSelected = false">Cancel</a>
             </li>
         </ul>
     </li>
