--- a/public/app/styles/_header.scss
+++ b/public/app/styles/_header.scss
@@ -1,6 +1,6 @@
 #header {
-    background-color: $primary-color;
-    color: $primary-color-inverse;
+    background-color: $color-primary;
+    color: $color-primary-inverse;
     height: 20px;
     padding-left: 20px;
     padding-right: 20px;
@@ -24,7 +24,7 @@
 
             a {
                 display: block;
-                color: $primary-color-darkened;
+                color: $color-primary-darkened;
                 font-weight: bold;
                 text-decoration: none;
 
