--- a/public/app/styles/_log.scss
+++ b/public/app/styles/_log.scss
@@ -1,11 +1,8 @@
 #log {
-    position: fixed;
     width: 100%;
-    bottom: 0;
-    left: 0;
-    right: 0;
     height: 120px;
-    border-top: 1px solid $primary-color;
+    border-top: 1px solid $color-primary;
     overflow: auto;
     padding: 20px;
+    margin-top: 20px;
 }
