--- a/public/app/styles/app.scss
+++ b/public/app/styles/app.scss
@@ -10,13 +10,13 @@
 
 @import "_meyer-reset";
 
-$primary-color: #eecc11;
-$primary-color-inverse: #000;
-$primary-color-darkened: darken($primary-color, 25%);
+$color-primary: #eecc11;
+$color-primary-inverse: #000;
+$color-primary-darkened: darken($color-primary, 25%);
 
 body {
-    background-color: $primary-color-inverse;
-    color: $primary-color;
+    background-color: $color-primary-inverse;
+    color: $color-primary;
     font-family: 'm-plus', monospace;
     font-size: 16px;
     line-height: 20px;
@@ -26,29 +26,42 @@ body {
 }
 
 a {
-    color: $primary-color;
+    color: $color-primary;
 
     &:hover,
     &:focus,
     &:active {
-        color: $primary-color;
+        color: $color-primary;
     }
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: 'm-plus-medium', monospace;
     text-transform: uppercase;
     margin-bottom: 20px;
+}
+
+h1 {
     font-size: 40px;
     line-height: 40px;
 }
 
-li {
-    margin-bottom: 20px;
+h2 {
+    font-size: 20px;
+    line-height: 20px;
+}
 
-    ul {
-        margin-top: 20px;
-        margin-left: 20px;
+ul {
+    li {
+        margin-bottom: 20px;
+
+        > ul {
+            margin-top: 20px;
+            margin-left: 20px;
+        }
+
+        &:last-child {
+            margin-bottom: 0;
+        }
     }
 }
 
@@ -57,20 +70,25 @@ p {
 }
 
 .btn {
+    border: 1px solid transparent;
     text-transform: uppercase;
     text-decoration: none;
-    background-color: $primary-color;
-    color: $primary-color-darkened;
     font-weight: bold;
     display: inline-block;
     padding-left: 10px;
     padding-right: 10px;
     height: 20px;
+    margin-bottom: 4px;
+
+    background-color: $color-primary-inverse;
+    color: $color-primary;
+    border-color: $color-primary;
+    box-shadow: 0 4px 0 $color-primary;
 
     &:hover,
     &:focus,
     &:active {
-        color: $primary-color-darkened;
+        color: $color-primary;
     }
 
     &:before {
@@ -81,46 +99,57 @@ p {
     }
 
     &.btn-muted {
-        background-color: $primary-color-darkened;
-        color: $primary-color-inverse;
+        border-color: $color-primary-darkened;
+        background-color: $color-primary-inverse;
+        color: $color-primary-darkened;
+        box-shadow: 0 4px 0 $color-primary-darkened;
     }
 }
 
 .container {
     padding: 40px 20px;
+}
 
-    /*
-    li {
-        display: block;
+ul.nav-showcase {
+    > li {
+        > ul {
+            background-color: darken($color-primary, 40%);
+            margin-left: 0;
+            padding: 5px;
 
-        &:after {
-            content: "";
-            clear: both;
-            display: block;
-        }
+            > li {
+                border: 3px double $color-primary;
+                padding: 20px;
+            }
 
-        a {
-            span {
-                display: inline-block;
-                float: left;
-                margin-right: 2px;
+            &.nav-showcase {
+                border: 3px double $color-primary;
+                padding: 20px;
+
+                > li {
+                    border: 0;
+                    padding: 0;
+
+                    > ul {
+                        background-color: $color-primary-inverse;
+                    }
+                }
             }
         }
     }
-    */
 }
 
 .lead {
-    color: $primary-color-darkened;
+    color: $color-primary-darkened;
 }
 
 .page-header {
-    border-bottom: 1px solid $primary-color-darkened;
+    border-bottom: 1px solid $color-primary-darkened;
     margin-bottom: 20px;
 }
 
 .text-muted {
-    color: $primary-color-darkened;
+    color: $color-primary-darkened;
 }
 
 
