--- a/public/app/components/location/location.html
+++ b/public/app/components/location/location.html
@@ -15,6 +15,6 @@
         </ul>
     </li>
     <li>
-        <a ui-sref="map">&larr;&nbsp;Map</a>
+        <a ui-sref="map">Exit to Map...</a>
     </li>
 </ul>
