--- a/public/app/components/structure/structure.html
+++ b/public/app/components/structure/structure.html
@@ -1,6 +1,5 @@
 <div class="page-header">
-    <h2 class="text-muted">{{:: structureCtrl.structure.name }}</h2>
-    <h1>{{ structureCtrl.room.name }}</h1>
+    <h2>{{:: structureCtrl.structure.name }} > {{ structureCtrl.room.name }}</h2>
     <p class="lead" ng-show="structureCtrl.room.isScanned && structureCtrl.room.description">
         {{ structureCtrl.room.description }}
     </p>
@@ -9,20 +8,6 @@
     <a class="btn" href ng-click="structureCtrl.scanRoom(structureCtrl.room)">Scan Room</a>
 </p>
 <ul class="nav-showcase" ng-show="structureCtrl.room.isScanned">
-    <li ng-repeat="door in structureCtrl.room.doors">
-        <span class="text-muted">[{{:: door.position }}]</span>
-        <a href ng-click="structureCtrl.openDoor(door)" data-this-room="{{ thisRoom = structureCtrl.findRoomById(door.roomId) }}">
-            <span ng-show="door.isExit">&larr;&nbsp;Exit to {{::door.name }}</span>
-            <span ng-hide="door.isExit">
-                <span ng-hide="door.entryAttempted || thisRoom.isScanned">Door...</span>
-                <span ng-show="door.entryAttempted || thisRoom.isScanned">
-                    <span ng-show="thisRoom.isScanned">{{::door.name }}...</span><span ng-hide="thisRoom.isScanned">Door...</span>
-                </span>
-            </span>
-        </a>
-        <span class="text-muted" ng-show="door.entryAttempted && door.isLocked">(Locked)</span>
-        <span class="text-muted" ng-show="door.isPrevious">(Back)</span>
-    </li>
     <li ng-repeat="vessel in structureCtrl.room.vessels">
         <a class="btn" href ng-click="structureCtrl.openVessel(vessel)" ng-class="{'btn-muted': !vessel.items.length}">
             {{:: vessel.name }}
@@ -46,5 +31,26 @@
                 <a class="btn btn-muted" href ng-click="vessel.isOpen = false">Cancel</a>
             </li>
         </ul>
+    </li>
+    <li ng-repeat="door in structureCtrl.room.doors">
+        <span>[{{:: door.position }}]</span>
+        <a href ng-click="structureCtrl.openDoor(door)" data-this-room="{{ thisRoom = structureCtrl.findRoomById(door.roomId) }}">
+            <span ng-show="door.isExit">Exit to {{::door.name }}...</span>
+            <span ng-hide="door.isExit">
+                <span ng-hide="door.entryAttempted || thisRoom.isScanned">
+                  <span ng-if="door.isRamp">Stairs...</span>
+                  <span ng-if="!door.isRamp">Door...</span>
+                </span>
+                <span ng-show="door.entryAttempted || thisRoom.isScanned">
+                    <span ng-if="thisRoom.isScanned">{{::door.name }}...</span>
+                    <span ng-if="!thisRoom.isScanned">
+                      <span ng-if="door.isRamp">Stairs...</span>
+                      <span ng-if="!door.isRamp">Door...</span>
+                    </span>
+                </span>
+            </span>
+        </a>
+        <span class="text-muted" ng-show="door.entryAttempted && door.isLocked">(Locked)</span>
+        <span class="text-muted" ng-show="door.isPrevious">(Back)</span>
     </li>
 </ul>
