--- a/public/app/styles/_header.scss
+++ b/public/app/styles/_header.scss
@@ -4,10 +4,6 @@
     height: 20px;
     padding-left: 20px;
     padding-right: 20px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
 
     .navbar-brand {
         float: left;
@@ -24,8 +20,7 @@
 
             a {
                 display: block;
-                color: $color-primary-darkened;
-                font-weight: bold;
+                color: $color-primary-inverse;
                 text-decoration: none;
 
                 u {
