--- a/public/app/styles/app.scss
+++ b/public/app/styles/app.scss
@@ -1,28 +1,18 @@
-@font-face {
-    font-family: 'm-plus';
-    src: url('../fonts/mplus-1m-regular.ttf');
-}
-
-@font-face {
-    font-family: 'm-plus-medium';
-    src: url('../fonts/mplus-1m-medium.ttf');
-}
-
 @import "_meyer-reset";
 
-$color-primary: #eecc11;
-$color-primary-inverse: #000;
+$color-primary: #000;
+$color-primary-inverse: #fff;
 $color-primary-darkened: darken($color-primary, 25%);
+$color-primary-muted: lighten($color-primary, 55%);
 
 body {
     background-color: $color-primary-inverse;
     color: $color-primary;
-    font-family: 'm-plus', monospace;
+    font-family: sans-serif;
     font-size: 16px;
     line-height: 20px;
     margin: 0;
     padding: 0;
-    letter-spacing: -0.5px;
 }
 
 a {
@@ -36,18 +26,7 @@ a {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    text-transform: uppercase;
     margin-bottom: 20px;
-}
-
-h1 {
-    font-size: 40px;
-    line-height: 40px;
-}
-
-h2 {
-    font-size: 20px;
-    line-height: 20px;
 }
 
 ul {
@@ -71,19 +50,15 @@ p {
 
 .btn {
     border: 1px solid transparent;
-    text-transform: uppercase;
     text-decoration: none;
-    font-weight: bold;
     display: inline-block;
-    padding-left: 10px;
-    padding-right: 10px;
-    height: 20px;
+    line-height:1;
+    padding: 15px 20px;
     margin-bottom: 4px;
 
     background-color: $color-primary-inverse;
     color: $color-primary;
     border-color: $color-primary;
-    box-shadow: 0 4px 0 $color-primary;
 
     &:hover,
     &:focus,
@@ -91,39 +66,32 @@ p {
         color: $color-primary;
     }
 
-    &:before {
-        content: "< ";
-    }
-    &:after {
-        content: " >"
-    }
-
     &.btn-muted {
-        border-color: $color-primary-darkened;
+        border-color: $color-primary-muted;
         background-color: $color-primary-inverse;
-        color: $color-primary-darkened;
-        box-shadow: 0 4px 0 $color-primary-darkened;
+        color: $color-primary-muted;
     }
 }
 
 .container {
-    padding: 40px 20px;
+    max-width: 340px;
+    padding: 20px;
+    margin: 0 auto;
 }
 
 ul.nav-showcase {
     > li {
         > ul {
-            background-color: darken($color-primary, 40%);
             margin-left: 0;
-            padding: 5px;
+            padding: 0;
 
             > li {
-                border: 3px double $color-primary;
+                border: 1px solid $color-primary;
                 padding: 20px;
             }
 
             &.nav-showcase {
-                border: 3px double $color-primary;
+                border: 1px solid $color-primary;
                 padding: 20px;
 
                 > li {
@@ -143,13 +111,8 @@ ul.nav-showcase {
     color: $color-primary-darkened;
 }
 
-.page-header {
-    border-bottom: 1px solid $color-primary-darkened;
-    margin-bottom: 20px;
-}
-
 .text-muted {
-    color: $color-primary-darkened;
+    color: $color-primary-muted;
 }
 
 
