--- a/public/app/styles/app.scss
+++ b/public/app/styles/app.scss
@@ -3,7 +3,11 @@
 $color-primary: #000;
 $color-primary-inverse: #fff;
 $color-primary-darkened: darken($color-primary, 25%);
-$color-primary-muted: lighten($color-primary, 55%);
+$color-primary-muted: lighten($color-primary, 80%);
+
+* {
+    box-sizing: border-box;
+}
 
 body {
     background-color: $color-primary-inverse;
@@ -66,10 +70,15 @@ p {
         color: $color-primary;
     }
 
-    &.btn-muted {
+    &.btn-muted,
+    &.btn-disabled {
         border-color: $color-primary-muted;
         background-color: $color-primary-inverse;
         color: $color-primary-muted;
+    }
+
+    &.btn-disabled {
+        cursor: default;
     }
 }
 
@@ -115,6 +124,184 @@ ul.nav-showcase {
     color: $color-primary-muted;
 }
 
+.row {
+    margin-left: -10px;
+    margin-right: -10px;
+
+    .col-sm-6 {
+        width: 50%;
+        padding-left: 10px;
+        padding-right: 10px;
+        float: left;
+    }
+
+    &:after,
+    &:before {
+        display: table;
+        content: " ";
+        clear:both;
+    }
+}
+
+ul.directional-controls {
+    position: relative;
+    height: 92px;
+    width: 140px;
+    margin-top: 20px;
+
+    > li {
+        margin: 0;
+
+        &.direction-n {
+            > a {
+                top: 0;
+                left: 50%;
+                margin-left: -22px;
+            }
+        }
+
+        &.direction-s {
+            > a {
+                bottom: 0;
+                left: 50%;
+                margin-left: -22px;
+            }
+        }
+
+        &.direction-e {
+            > a {
+                right: 0;
+                bottom: 0;
+            }
+        }
+
+        &.direction-w {
+            > a {
+                left: 0;
+                bottom: 0;
+            }
+        }
+
+        > a {
+            position: absolute;
+            width: 44px;
+            height: 44px;
+            display: block;
+            padding: 0;
+            line-height: 42px;
+            text-align: center;
+            text-transform: uppercase;
+            margin: 0;
+        }
+    }
+}
+
+.dungeon-map {
+    margin-top: 20px;
+
+    .dungeon-map-floor-menu {
+        float: left;
+        margin-right: 5px;
+        width: 35px;
+
+        > .dungeon-map-floor-menu-item {}
+    }
+
+    .dungeon-map-floor {
+        height: 92px;
+        position: relative;
+        border: 1px solid $color-primary;
+        float: left;
+        width: 100px;
+
+        &:after,
+        &:before {
+            display: table;
+            content: " ";
+            clear:both;
+        }
+    }
+
+    .dungeon-map-room {
+        border: 1px solid transparent;
+        position: absolute;
+        background-color: $color-primary;
+
+        &.selected {
+            background-color: $color-primary-inverse;
+            border-color: $color-primary;
+        }
+
+        .dungeon-map-door {
+            background-color: $color-primary;
+            position: absolute;
+
+            &.dungeon-map-door-n {
+                height: 2px;
+                width: 6px;
+                top: -3px;
+                left: 50%;
+                margin-left: -3px;
+            }
+            &.dungeon-map-door-s {
+                height: 2px;
+                width: 6px;
+                bottom: -3px;
+                left: 50%;
+                margin-left: -3px;
+            }
+            &.dungeon-map-door-e {
+                height: 6px;
+                width: 2px;
+                right: -3px;
+                top: 50%;
+                margin-top: -3px;
+            }
+            &.dungeon-map-door-w {
+                height: 6px;
+                width: 2px;
+                left: -3px;
+                top: 50%;
+                margin-top: -3px;
+            }
+
+            &.dungeon-map-exit {
+                background-color: transparent;
+                width: 0;
+            	height: 0;
+            	border-top: 6px solid transparent;
+            	border-bottom: 6px solid transparent;
+            	border-left: 6px solid $color-primary;
+                margin-top: -6px;
+                left: -8px;
+            }
+
+            &.dungeon-map-ramp {
+                background-color: $color-primary;
+
+                &.dungeon-map-door-s {
+                    background-size: 2px;
+                    background-image:linear-gradient(to right, $color-primary-inverse 1px, transparent 1px);
+                }
+
+                &.dungeon-map-door-n {
+                    background-size: 2px;
+                    background-image:linear-gradient(to right, $color-primary-inverse 1px, transparent 1px);
+                }
+
+                &.dungeon-map-door-e {
+                    background-size: 1px 2px;
+                    background-image:linear-gradient($color-primary-inverse 1px, transparent 1px);
+                }
+
+                &.dungeon-map-door-w {
+                    background-size: 1px 2px;
+                    background-image:linear-gradient($color-primary-inverse 1px, transparent 1px);
+                }
+            }
+        }
+    }
+}
 
 @import "_header";
 @import "_log";
