--- a/public/app/components/utilities/utilities.html
+++ b/public/app/components/utilities/utilities.html
@@ -1,4 +1,11 @@
-<div id="utilities">
-    <a href ng-click="utilitiesCtrl.save()">Save Game</a>
-    <a href ng-click="utilitiesCtrl.reset()">Reset Game</a>
-</div>
+<ul class="nav" id="utilities">
+    <li>
+        <a class="btn" href ui-sref="inventory()">Inventory</a>
+    </li>
+    <li>
+        <a class="btn" href ui-sref="inventory()">Status</a>
+    </li>
+    <li>
+        <a class="btn" href ui-sref="inventory()">Menu</a>
+    </li>
+</ul>
