--- a/public/app/styles/app.scss
+++ b/public/app/styles/app.scss
@@ -3,7 +3,8 @@
 $color-primary: #000;
 $color-primary-inverse: #fff;
 $color-primary-darkened: darken($color-primary, 25%);
-$color-primary-muted: lighten($color-primary, 80%);
+$color-primary-muted: lighten($color-primary, 70%);
+$color-primary-lightened: lighten($color-primary, 94%);
 
 * {
     box-sizing: border-box;
@@ -35,11 +36,11 @@ h1, h2, h3, h4, h5, h6 {
 
 ul {
     li {
-        margin-bottom: 20px;
+        margin-bottom: 10px;
 
         > ul {
-            margin-top: 20px;
-            margin-left: 20px;
+            margin-top: 10px;
+            margin-left: 10px;
         }
 
         &:last-child {
@@ -49,20 +50,23 @@ ul {
 }
 
 p {
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 .btn {
     border: 1px solid transparent;
     text-decoration: none;
-    display: inline-block;
+    display: block;
     line-height:1;
-    padding: 15px 20px;
+    padding: 13px 20px;
+    height: 44px;
     margin-bottom: 4px;
-
+    width: 100%;
+    text-align: center;
     background-color: $color-primary-inverse;
     color: $color-primary;
     border-color: $color-primary;
+    border-radius: 8px;
 
     &:hover,
     &:focus,
@@ -83,25 +87,28 @@ p {
 }
 
 .container {
-    max-width: 340px;
-    padding: 20px;
+    padding: 10px;
     margin: 0 auto;
+}
+
+.page-header {
+    text-align: center;
 }
 
 ul.nav-showcase {
     > li {
         > ul {
-            margin-left: 0;
+            margin: 0;
             padding: 0;
 
             > li {
-                border: 1px solid $color-primary;
-                padding: 20px;
+                background-color: $color-primary-lightened;
+                padding: 10px;
             }
 
             &.nav-showcase {
-                border: 1px solid $color-primary;
-                padding: 20px;
+                background-color: $color-primary-lightened;
+                padding: 10px;
 
                 > li {
                     border: 0;
@@ -128,6 +135,10 @@ ul.nav-showcase {
     margin-left: -10px;
     margin-right: -10px;
 
+    > * {
+        min-height: 1px;
+    }
+
     .col-sm-6 {
         width: 50%;
         padding-left: 10px;
@@ -147,7 +158,7 @@ ul.directional-controls {
     position: relative;
     height: 92px;
     width: 140px;
-    margin-top: 20px;
+    margin: 10px auto 0;
 
     > li {
         margin: 0;
@@ -197,22 +208,47 @@ ul.directional-controls {
 }
 
 .dungeon-map {
-    margin-top: 20px;
+    height: 170px;
+    padding: 10px;
+    background-color: $color-primary-lightened;
+    border: 1px solid $color-primary;
+    border-bottom-width: 3px;
 
     .dungeon-map-floor-menu {
-        float: left;
-        margin-right: 5px;
-        width: 35px;
+        padding-right: 5px;
+        width: 1px;
+        display: table-cell;
+        vertical-align: top;
 
-        > .dungeon-map-floor-menu-item {}
+        > .dungeon-map-floor-menu-item {
+            padding: 0 5px;
+            line-height: 30px;
+            height: 30px;
+        }
     }
 
-    .dungeon-map-floor {
-        height: 92px;
+    .dungeon-map-floor-container {
+        display: table-cell;
+        vertical-align: top;
+        width: 10000px;
+        height: 145px;
+        overflow: hidden;
         position: relative;
-        border: 1px solid $color-primary;
-        float: left;
-        width: 100px;
+        background-color: $color-primary-lightened;
+        background-size: 16px 16px;
+        background-image: linear-gradient(to right, $color-primary-muted 1px, transparent 1px), linear-gradient(to bottom, $color-primary-muted 1px, transparent 1px);
+
+        #dungeon-map-floor {
+            position: absolute;
+            transition: left 200ms ease-in, right 200ms ease-in, top 200ms ease-in, bottom 200ms ease-in;
+
+            &:after,
+            &:before {
+                display: table;
+                content: " ";
+                clear:both;
+            }
+        }
 
         &:after,
         &:before {
@@ -225,44 +261,49 @@ ul.directional-controls {
     .dungeon-map-room {
         border: 1px solid transparent;
         position: absolute;
-        background-color: $color-primary;
+        background-color: $color-primary-muted;
 
         &.selected {
-            background-color: $color-primary-inverse;
+            background-color: $color-primary;
             border-color: $color-primary;
+            box-shadow: 0 0px 0px 1px $color-primary-inverse inset;
+
+            > .dungeon-map-door {
+                background-color: $color-primary;
+            }
         }
 
         .dungeon-map-door {
-            background-color: $color-primary;
+            background-color: $color-primary-muted;
             position: absolute;
 
             &.dungeon-map-door-n {
-                height: 2px;
-                width: 6px;
-                top: -3px;
+                height: 3px;
+                width: 10px;
+                top: -4px;
                 left: 50%;
-                margin-left: -3px;
+                margin-left: -5px;
             }
             &.dungeon-map-door-s {
-                height: 2px;
-                width: 6px;
-                bottom: -3px;
+                height: 3px;
+                width: 10px;
+                bottom: -4px;
                 left: 50%;
-                margin-left: -3px;
+                margin-left: -5px;
             }
             &.dungeon-map-door-e {
-                height: 6px;
-                width: 2px;
-                right: -3px;
+                height: 10px;
+                width: 3px;
+                right: -4px;
                 top: 50%;
-                margin-top: -3px;
+                margin-top: -5px;
             }
             &.dungeon-map-door-w {
-                height: 6px;
-                width: 2px;
-                left: -3px;
+                height: 10px;
+                width: 3px;
+                left: -4px;
                 top: 50%;
-                margin-top: -3px;
+                margin-top: -5px;
             }
 
             &.dungeon-map-exit {
@@ -277,30 +318,87 @@ ul.directional-controls {
             }
 
             &.dungeon-map-ramp {
-                background-color: $color-primary;
+                background-color: $color-primary-muted;
 
                 &.dungeon-map-door-s {
-                    background-size: 2px;
-                    background-image:linear-gradient(to right, $color-primary-inverse 1px, transparent 1px);
+                    right: 1px;
+                    bottom: 1px;
+                    left: auto;
+                    margin: 0;
+                    background-size: 3px 1px;
+                    background-image: linear-gradient(to right, $color-primary-inverse 1px, transparent 1px);
+                    height: 8px;
+                    width: 20px;
                 }
 
                 &.dungeon-map-door-n {
-                    background-size: 2px;
-                    background-image:linear-gradient(to right, $color-primary-inverse 1px, transparent 1px);
+                    left: 1px;
+                    top: 1px;
+                    margin: 0;
+                    background-size: 3px 1px;
+                    background-image: linear-gradient(to right, $color-primary-inverse 1px, transparent 1px);
+                    height: 8px;
+                    width: 20px;
                 }
 
                 &.dungeon-map-door-e {
-                    background-size: 1px 2px;
-                    background-image:linear-gradient($color-primary-inverse 1px, transparent 1px);
+                    right: 1px;
+                    left: auto;
+                    top: 1px;
+                    margin: 0;
+                    background-size: 1px 3px;
+                    background-image: linear-gradient($color-primary-inverse 1px, transparent 1px);
+                    height: 20px;
+                    width: 8px;
                 }
 
                 &.dungeon-map-door-w {
-                    background-size: 1px 2px;
-                    background-image:linear-gradient($color-primary-inverse 1px, transparent 1px);
+                    left: 1px;
+                    bottom: 1px;
+                    top: auto;
+                    margin: 0;
+                    background-size: 1px 3px;
+                    background-image: linear-gradient($color-primary-inverse 1px, transparent 1px);
+                    height: 20px;
+                    width: 8px;
                 }
             }
         }
     }
+}
+
+#utilities {
+    background-color: #000;
+    padding: 5px 10px;
+    margin: 0;
+    overflow: hidden;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    right: 0;
+
+    > li {
+        padding: 0 5px;
+        width: 33.33333%;
+        float: left;
+        margin: 0;
+    }
+    .btn {
+        margin: 0;
+        border-color: transparent;
+    }
+}
+
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
+}
+
+.hidden {
+    visibility: hidden !important;
+}
+.visible {
+    visibility: visible !important;
 }
 
 @import "_header";
