--- a/server/views/layouts/main.handlebars
+++ b/server/views/layouts/main.handlebars
@@ -2,6 +2,9 @@
 <html>
     <head>
         <title>STATION</title>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="/css/app.min.css">
     </head>
     <body ng-app="{{ module }}">
@@ -11,6 +14,7 @@
             <ui-view></ui-view>
         </div>
         <st-log></st-log>
+        <st-utilities></st-utilities>
         <script src="/js/app.js"></script>
     </body>
 </html>
