--- a/public/app/styles/app.scss
+++ b/public/app/styles/app.scss
@@ -13,7 +13,7 @@ $color-primary-lightened: lighten($color-primary, 94%);
 body {
     background-color: $color-primary-inverse;
     color: $color-primary;
-    font-family: sans-serif;
+    font-family: monospace;
     font-size: 16px;
     line-height: 20px;
     margin: 0;
