--- a/public/app/components/location/location.html
+++ b/public/app/components/location/location.html
@@ -3,13 +3,18 @@
 </div>
 <ul class="nav-showcase">
     <li ng-repeat="structure in locationCtrl.location.structures">
-        <a href ng-click="locationCtrl.selectStructure(structure)">{{:: structure.name }}</a>
+        <a class="btn" href ng-click="locationCtrl.selectStructure(structure)">{{:: structure.name }}</a>
         <ul ng-if="structure.isSelected">
             <li ng-repeat="entrance in structure.entrances">
                 <p>{{:: structure.description }}</p>
-                <a class="btn" href ng-click="structure.isSelected = false" ui-sref="structure({ locationId: locationCtrl.location._id, structureId: structure._id, roomId: entrance.roomId })">
-                    Enter
-                </a> <span class="text-muted">({{:: entrance.name }})</span>
+                <div class="row">
+                  <div class="col-sm-6">
+                    <a class="btn" href ng-click="structure.isSelected = false" ui-sref="structure({ locationId: locationCtrl.location._id, structureId: structure._id, roomId: entrance.roomId })">Enter</a>
+                  </div>
+                  <div class="col-sm-6">
+                    <span class="text-muted">({{:: entrance.name }})</span>
+                  </div>
+                </div>
             </li>
         </ul>
     </li>
