--- a/public/app/styles/_header.scss
+++ b/public/app/styles/_header.scss
@@ -1,7 +1,8 @@
 #header {
     background-color: $color-primary;
     color: $color-primary-inverse;
-    height: 20px;
+    height: 36px;
+    line-height: 36px;
     padding-left: 10px;
     padding-right: 10px;
 
